--- a/messenger-ui/src/app/components/chat-list/chat-list.html
+++ b/messenger-ui/src/app/components/chat-list/chat-list.html
@@ -1,1 +1,81 @@
-<p>chat-list works!</p>
+<div class="sticky-top bg-white">
+  <div class="d-flex justify-content-between align-items-center gap-2 p-2">
+    <h4>Chat</h4>
+    @if (!searchNewContact()) {
+      <i class="fas fa-comment-medical cursor-pointer" (click)="searchContact()"></i>
+    } @else {
+      <i class="fas fa-times-circle cursor-pointer" (click)="searchNewContact.set(false)"></i>
+    }
+  </div>
+  <div class="d-flex flex-column gap-2 p-2">
+    <div class="input-group">
+      <span class="input-group-text">
+        <i class="fas fa-search"></i>
+      </span>
+      <input type="text" class="form-control-sm" placeholder="Search in the chat..." aria-label="Search">
+    </div>
+    <div class="d-flex gap-2">
+      <span class="badge rounded-pill text-bg-light cursor-pointer">All</span>
+      <span class="badge rounded-pill text-bg-light cursor-pointer">Unread</span>
+      <span class="badge rounded-pill text-bg-light cursor-pointer">Favourites</span>
+    </div>
+  </div>
+</div>
+
+<div class="chat-list mt-3">
+  @if (chats().length && !searchNewContact()) {
+    @for (chat of chats(); track chat.id) {
+      <div class="d-flex align-items-center justify-content-between border-bottom-gray p-2"
+        (click)="onChatClicked(chat)"
+      >
+        <div class="d-flex gap-2">
+          <div class="user-img">
+            <img src="user.png" alt="">
+          </div>
+          <div class="d-flex flex-column">
+            <span>{{ chat.name }}</span>
+            <small class="text-secondary">
+              @if (chat.lastMessage === 'Attachment') {
+                <i class="fas fa-image"></i>
+              }
+              {{ wrapMessage(chat.lastMessage) }}
+            </small>
+          </div>
+        </div>
+
+        <div class="d-flex flex-column align-items-end">
+          <span class="msg-date"
+                [class.unread]="typeof chat.unreadCount === 'number' && chat.unreadCount > 0"
+          >
+            {{ chat.lastMessageTime | date: 'dd.MM.yy HH:mm' }}
+          </span>
+          @if (typeof chat.unreadCount === 'number' && chat.unreadCount > 0) {
+            <small class="unread-msg-badge">{{ chat.unreadCount }}</small>
+          }
+        </div>
+      </div>
+    }
+  } @else if (searchNewContact()) {
+    @for (contact of contacts(); track contact.id) {
+      <div class="d-flex align-items-center justify-content-between border-bottom-gray p-2"
+           (click)="selectContact()"
+      >
+        <div class="d-flex gap-2">
+          <div class="user-img">
+            <img src="user.png" alt="">
+          </div>
+          <div class="d-flex flex-column">
+            <span>{{ contact.firstName + ' ' + contact.lastName}}</span>
+            @if (contact.online) {
+              <small class="text-secondary">Online</small>
+            } @else {
+              <small class="text-secondary">Last seen {{contact.lastSeen | date: 'dd.mm.yyyy HH:mm' }}</small>
+            }
+          </div>
+        </div>
+      </div>
+    }
+  } @else {
+    <small>No chats yet..</small>
+  }
+</div>
