--- a/messenger-ui/src/styles.scss
+++ b/messenger-ui/src/styles.scss
@@ -20,3 +20,14 @@ body {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.user-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+
+  > img {
+    width: 100%;
+  }
+}
