--- a/messenger-ui/src/app/components/chat-list/chat-list.html
+++ b/messenger-ui/src/app/components/chat-list/chat-list.html
@@ -69,7 +69,7 @@
             @if (contact.online) {
               <small class="text-secondary">Online</small>
             } @else {
-              <small class="text-secondary">Last seen {{contact.lastSeen | date: 'dd.mm.yyyy HH:mm' }}</small>
+              <small class="text-secondary">Last seen {{contact.lastSeen | date: 'dd.MM.yyyy HH:mm' }}</small>
             }
           </div>
         </div>
